tests/NormalTests/paczka1/small_fuzzy/10614579.err
Error in line 3: A460 A460 27,3
Error in line 5: GUTIwMYM6pW S655 94,7
Error in line 9: GUTIwMYM6pW A460 86,7
Error in line 12: GUTIwMYM6pW S655 77,1
Error in line 14: GUTIwMYM6pW A460 28,8
